# ai_for_the_win

./: .cursorignore  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  Dockerfile  GETTING_STARTED.md  GITHUB_SETTINGS_GUIDE.md  LEARNING_GUIDE.md  LICENSE  NOTICE  QUICKSTART.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  ai-for-the-win.code-workspace  pyproject.toml  requirements-core.txt  requirements-llm.txt  requirements.txt  ruff.toml  test_notebook_00f.py  test_notebook_00g.py  test_notebook_03b.py  test_notebook_06a.py  test_notebook_06b.py  test_notebook_17a.py
.github/: CODEOWNERS  dependency-review-config.yml  mlc_config.json
capstone-projects/: README.md
ctf/: README.md
ctf-challenges/: README.md
curriculum/: ai-security-training-program.md
data/: README.md
demo/: __init__.py  anomaly_dashboard.py  launcher.py  progress_tracker.py
docker/: Dockerfile  README.md  docker-compose.yml  requirements.txt
docs/: ARCHITECTURE.md  ASSESSMENT.md  CLAUDE.md  COMMERCIAL_LICENSING.md  CURRICULUM_REVIEW_REPORT.md  GETTING_STARTED.md  LAB_DEPENDENCY_GRAPH.md  ROADMAP.md  SOURCES.md  _config.yml  ai-security-training-program.md  curriculum-audit-report.md  documentation-guide.md  index.md  lab-prerequisites.md  learning-guide.md  presentation-outline-threat-summit-2026.md
labs/: README.md
notebooks/: COLAB_SETUP.md  lab00a_python_security.ipynb  lab00b_ml_concepts.ipynb  lab00c_prompt_engineering.ipynb  lab00e_visualization_stats.ipynb  lab00f_hello_world_ml.ipynb  lab00g_working_with_apis.ipynb  lab01_phishing_classifier.ipynb  lab01_python_security.ipynb  lab02_malware_clustering.ipynb  lab02_prompt_engineering.ipynb  lab03_anomaly_detection.ipynb  lab03_vibe_coding.ipynb  lab03b_ml_vs_llm.ipynb  lab04_llm_log_analysis.ipynb  lab04_ml_concepts.ipynb  lab04b_first_ai_agent.ipynb  lab05_ai_security_ops.ipynb  lab05_threat_intel_agent.ipynb  lab06_security_rag.ipynb  lab06_visualization_stats.ipynb  lab06a_embeddings_vectors.ipynb  lab06b_embeddings_vectors.ipynb  lab07_hello_world_ml.ipynb  lab07_yara_generator.ipynb  lab07a_binary_basics.ipynb  lab07b_sigma_fundamentals.ipynb  lab08_vuln_scanner_ai.ipynb  lab08_working_with_apis.ipynb  lab09_detection_pipeline.ipynb  lab09b_monitoring_ai.ipynb  lab10_ir_copilot.ipynb  lab10_phishing_classifier.ipynb  lab10a_dfir_fundamentals.ipynb  lab10b_dfir_fundamentals.ipynb  lab11_malware_clustering.ipynb  lab11a_ransomware_fundamentals.ipynb  lab12_anomaly_detection.ipynb  lab12_ransomware_simulation.ipynb  lab13_memory_forensics.ipynb  (+49 more)
resources/: README.md  ai-agent-architectures.md  role-based-learning-paths.md  security-to-ai-glossary.md  tools-and-resources.md
scripts/: accessibility_audit.py  add_license_headers.py  check_ai_model_freshness.py  check_progress.py  launcher.py  (+9 more)
(+520 files in other folders)
