[project]
name = "ai-for-the-win"
version = "3.1.0"
description = "AI-powered security training platform with 24 labs, CTF challenges, and capstone projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AI for the Win Contributors"}
]
keywords = ["security", "ai", "machine-learning", "llm", "training", "cybersecurity", "dfir", "threat-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/depalmar/ai_for_the_win"
Documentation = "https://github.com/depalmar/ai_for_the_win#readme"
Repository = "https://github.com/depalmar/ai_for_the_win.git"
Issues = "https://github.com/depalmar/ai_for_the_win/issues"

[project.optional-dependencies]
minimal = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "nltk>=3.8.0",
    "matplotlib>=3.8.0",
]
llm = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
exclude = '''
/(
    \.git
    | \.venv
    | \.eggs
    | build
    | dist
    | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "notebooks"]

[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
skips = ["B101", "B311"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
exclude = ["notebooks/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "requires_api: marks tests that require an LLM API key",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["labs", "shared", "demo"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
